2008-04-07  Philip Van Hoof <pvanhoof@gnome.org>

	* Refcount problem in async contexts
	* Fixing the actual problem, too

2008-04-03  Philip Van Hoof <pvanhoof@gnome.org>

	* Merged patch for upstream camel-lite bug #257361
	* Bugfix for ticket #76
	* Added some robustness code

2008-04-02  Jose Dapena Paz  <jdapena@igalia.com>

	* Respect better the attachment flag headers also in POP (equivalent
	to previous change in imap.

2008-04-02  Philip Van Hoof <pvanhoof@gnome.org>

	* Added a name file, just like the url_string file, to each account
	* Moved the sendqueue's outbox and sentbox under a sendqueue subdir

2008-04-01  Philip Van Hoof <pvanhoof@gnome.org>

	* Storing certificate fingerprints in cache_dir
	* Writing a file called url_string in the account's cache dir, to make
	it more easy for searchers and meta indexers to identify this account
	* Status reporting fix for POP accounts
	* Merging with camel upstream

2008-03-31  Philip Van Hoof <pvanhoof@gnome.org>

	* Creating the POP account's cache dir when/if removed

2008-03-28  Philip Van Hoof <pvanhoof@gnome.org>

	* Cleaning up cache when canceling a POP message download

2008-03-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Support for Importance header

2008-03-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed several problems like documentation problems in Jose's patch
	* Review of Jose's patch
	* Fixed several insignificant smaller robustness problems
	* Fixed a major leak
	* Fixed a regression due to a performance fix when moving and renaming
	Maildir folders

2008-03-26  Jose Dapena Paz  <jdapena@igalia.com>

	* Replace old tny_header_get_ api for strings with
	tny_header_dup_ api. This should be a bit better for
	being thread safe. Also modified code using this. The
	goal is being able to do the string copy in a lock.

	* Now moving a folder copies all the cached messages,
	but not the summaries, to avoid crashes trying to
	reuse the old summary.

	This is a major API change.
